[package]
name = "type-set"
version = "0.3.2"
edition = "2021"
repository = "https://github.com/jbr/type-set"
readme = "README.md"
keywords = ["collections"]
description = "A set of heterogeneous types"
categories = ["data-structures"]
license = "MIT OR Apache-2.0"

[dependencies]
log = { version = "0.4.27", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
test-harness = "0.3.0"

[features]
log = ["dep:log"]
